# first-air

./: .gitignore  CLAUDE.md  CMakeLists.txt  First Air 2.md  First Air.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dsp/: firstair.dsp
scripts/: build.sh  generate_dsp.sh  install_deps.sh
